--- a/app/src/main/res/layout/crop_bill_list_card.xml
+++ b/app/src/main/res/layout/crop_bill_list_card.xml
@@ -7,66 +7,45 @@
         android:orientation="vertical"
         android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
+        android:layout_margin="16dp"
+        android:padding="24dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-
+       >
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
+
                     android:layout_marginTop="3dp">
 
                     <TextView
                         android:id="@+id/txt_crop_bill_card_supplier_name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
                         android:text="Kleiner Parkers"
-                        android:textColor="#696666"
-                        android:textSize="14sp" />
+                        android:layout_marginTop="16dp"
+                        android:textColor="#000000"
+                        android:layout_weight="0.6"
+                        android:textSize="16sp" />
                     <LinearLayout
                         android:orientation="horizontal"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="right"
-                        android:layout_marginLeft="6dp"
+                        android:layout_weight="0.4"
                         >
 
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="right"
-                            android:layout_marginLeft="5dp"
-                            android:text="UGX"
-                            android:textColor="#696666"
-                            android:textSize="14dp" />
+     
 
                         <TextView
                             android:id="@+id/txt_crop_bill_card_balance_due"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginRight="10dp"
-                            android:text="300,000"
-                            android:textColor="#696666"
+                            android:layout_marginTop="16dp"
+                            android:text="UGX 300,000"
+                            android:textColor="@color/estimates_card_currency_color"
                             android:textSize="14dp" />
 
 
@@ -74,7 +53,7 @@
                             android:id="@+id/img_crop_bill_card_more"
                             android:layout_width="25dp"
                             android:layout_height="25dp"
-                            android:backgroundTint="@color/black"
+                            android:backgroundTint="@color/darker_gray"
                             android:textColor="@color/darker_gray"
                             android:src="@drawable/more_options_icon" />
 
@@ -85,29 +64,31 @@
 
 
                 </LinearLayout>
+                <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:background="#D2D3D2" />
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp">
 
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginTop="3dp"
-                        android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/txt_crop_bill_card_number"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:text="#BL-0001"
-                            android:textColor="#696666"
+                            android:textColor="@color/estimates_card_text_color"
                             android:textSize="14dp" />
 
-                    </LinearLayout>
+
 
                     <TextView
                         android:id="@+id/txt_crop_bill_card_status"
@@ -117,54 +98,46 @@
                         android:gravity="end"
                         android:layout_marginLeft="5dp"
                         android:text="DRAFT"
-                        android:textColor="#696666"
+                        android:textColor="@color/estimates_card_text_color"
                         android:textSize="14sp"
-                        android:textStyle="bold"/>
+                        />
 
                 </LinearLayout>
 
 
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
 
-                    <LinearLayout
+                <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="6dp"
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginTop="3dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginTop="8dp"
+                        android:gravity="center"
                         android:orientation="horizontal">
 
-                        <LinearLayout
-                            android:id="@+id/layout_crop_estimate_card_reference_number"
-                            android:orientation="horizontal"
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="wrap_content"
 
-                            >
 
 
                             <TextView
                                 android:id="@+id/txt_crop_bill_card_bill_date"
-                                android:layout_width="match_parent"
+                                android:layout_width="0dp"
+                                android:layout_weight="0.4"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
                                 android:text="2019-04-25"
-                                android:textColor="#696666"
+                                android:textColor="@color/estimates_card_text_color"
                                 android:textSize="14dp" />
 
 
-                        </LinearLayout>
-<LinearLayout
 
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_width="0dp"
-    android:layout_weight="1"
-    android:gravity="end">
+                        <LinearLayout
+
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_width="0dp"
+                            android:layout_weight="0.6"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginBottom="8dp"
+                            android:gravity="end">
 
 
                         <TextView
@@ -174,30 +147,28 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:text="Bill Due :"
-                            android:textColor="#696666"
+                            android:textColor="@color/estimates_card_text_color"
                             android:textSize="14sp"
-                            android:textStyle="bold"/>
-    <TextView
-        android:id="@+id/txt_crop_bill_card_bill_due"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:text="2019-04-30"
-        android:textColor="#696666"
-        android:gravity="end"
-        android:textSize="14sp"
-        />
-</LinearLayout>
+                            />
+                        <TextView
+                            android:id="@+id/txt_crop_bill_card_bill_due"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:text="2019-04-30"
+                            android:textColor="@color/estimates_card_text_color"
+                            android:gravity="end"
+                            android:textSize="14sp"
+                            />
+                    </LinearLayout>
 
                     </LinearLayout>
 
 
-                </LinearLayout>
 
 
 
-            </LinearLayout>
-        </LinearLayout>
+
 
 
 
