--- a/app/src/main/res/layout/crop_customer_list_card.xml
+++ b/app/src/main/res/layout/crop_customer_list_card.xml
@@ -8,8 +8,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-       android:layout_margin="2dp"
-        android:background="@color/white"
+        android:layout_margin="16dp"
+        android:padding="8dp"
+        android:paddingStart="24dp"
+        android:background="@color/whiteColor"
         android:orientation="vertical">
 
 
@@ -33,7 +35,7 @@
                     android:text="Kiwanuka Farm Ltd"
                     android:textStyle="bold"
                     android:textColor="#696666"
-                    android:textSize="14dp" />
+                    android:textSize="14sp" />
 
 
                 <TextView
@@ -44,8 +46,8 @@
                     android:layout_marginRight="25dp"
                     android:gravity="end"
                     android:text="0/0 unpaid"
-                    android:textColor="#696666"
-                    android:textSize="14dp" />
+                    android:textColor="@color/estimates_card_currency_color"
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
@@ -59,142 +61,143 @@
 
 
         </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:background="#D2D3D2" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            >
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:id="@+id/txt_crop_customer_card_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0700214672"
+                    android:textColor="#696666"
+                    android:textSize="14sp" />
 
+                <TextView
 
-                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginRight="5dp"
+                    android:text=","
+                    android:textColor="#696666"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txt_crop_customer_card_city_town"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:text="Masaka"
+                    android:textColor="#696666"
+                    android:textSize="14sp" />
+            </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginTop="3dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/txt_crop_customer_card_phone"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="0700214672"
-                            android:textColor="#696666"
-                            android:textSize="14dp" />
-
-                        <TextView
-
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="2dp"
-                            android:layout_marginRight="5dp"
-                            android:text=","
-                            android:textColor="#696666"
-                            android:textSize="14dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/txt_crop_customer_card_city_town"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:layout_weight="1"
-                            android:text="Masaka"
-                            android:textColor="#696666"
-                            android:textSize="14dp" />
+            <TextView
+                android:id="@+id/txt_crop_customer_card_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="John Kiwanuka"
+                android:textColor="#696666"
+                android:textSize="14sp" />
 
 
-                    </LinearLayout>
 
 
-                </LinearLayout>
 
-                <LinearLayout
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal">
+
+
+
+
+
+
+            <TextView
+                android:id="@+id/txt_crop_customer_card_opening_balance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:gravity="end"
+                android:paddingLeft="0dp"
+                android:text="UGX 176,2156,000"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_crop_customer_card_due_payment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:visibility="gone"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="6dp"
+
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Due Payment :"
+                    android:textColor="#696666"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txt_crop_customer_card_due_payment_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginTop="3dp"
-                    android:orientation="horizontal">
-
-
-                    <TextView
-                        android:id="@+id/txt_crop_customer_card_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="John Kiwanuka"
-                        android:textColor="#696666"
-                        android:textSize="14dp" />
-
-
-
-                    <TextView
-                        android:id="@+id/txt_crop_customer_card_opening_balance"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="20dp"
-                        android:gravity="end"
-                        android:paddingLeft="0dp"
-                        android:text="1762156000"
-                        android:textColor="@color/red"
-                        android:textSize="14dp" />
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/layout_crop_customer_card_due_payment"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginTop="3dp"
-                        android:layout_marginBottom="6dp"
-
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Due Payment :"
-                            android:textColor="#696666"
-                            android:textSize="14dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/txt_crop_customer_card_due_payment_date"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:layout_weight="1"
-                            android:text="3-15-2018"
-                            android:textColor="#696666"
-                            android:textSize="14dp" />
-
-
-                    </LinearLayout>
-
-
-                </LinearLayout>
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:text="3-15-2018"
+                    android:textColor="#696666"
+                    android:textSize="14sp" />
 
 
             </LinearLayout>
+
+
         </LinearLayout>
+
+
+
+
 
 
     </LinearLayout>
