--- a/app/src/main/res/layout/crop_estimate_list_card.xml
+++ b/app/src/main/res/layout/crop_estimate_list_card.xml
@@ -3,65 +3,52 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <LinearLayout
         android:orientation="vertical"
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp">
-
-
-
-
-
+        android:layout_margin="16dp"
+        android:padding="24dp"
+        android:background="@color/whiteColor"
+        >
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginTop="3dp">
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="4dp">
 
                     <TextView
                         android:id="@+id/txt_crop_estimate_card_customer_name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:textStyle="bold"
                         android:text="Kleiner Parker Firm "
-                        android:textColor="#696666"
-                        android:textSize="14sp" />
+                        android:layout_marginTop="16dp"
+                        android:textColor="#000000"
+                        android:layout_weight="0.6"
+                        android:textSize="16sp" />
                     <LinearLayout
                         android:orientation="horizontal"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="right"
-                        android:layout_marginLeft="6dp"
+                        android:layout_weight="0.4"
+                        
                         >
-
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="right"
-                            android:layout_marginLeft="5dp"
-                            android:text="UGX"
-                            android:textColor="@color/red"
-                            android:textSize="14dp" />
-
                         <TextView
                             android:id="@+id/txt_crop_estimate_card_amount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:layout_marginRight="10dp"
-                            android:text="300,000"
-                            android:textColor="@color/red"
+                            android:layout_marginTop="16dp"
+                            android:text="UGX 300,000"
+                            android:textColor="@color/estimates_card_currency_color"
                             android:textSize="14dp" />
-
-
                         <ImageView
                             android:id="@+id/img_crop_estimate_card_more"
                             android:layout_width="25dp"
@@ -69,14 +56,16 @@
                             android:backgroundTint="@color/black"
                             android:textColor="@color/darker_gray"
                             app:srcCompat="@drawable/more_options_icon" />
-
-
                     </LinearLayout>
-
-
-
-
                 </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="#D2D3D2" />
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -86,9 +75,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginTop="3dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -96,8 +84,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="EST-001"
-                            android:textColor="#696666"
-                            android:textSize="14dp" />
+                            android:textColor="@color/estimates_card_text_color"
+                            android:textSize="14sp" />
 
                     </LinearLayout>
 
@@ -109,17 +97,18 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginTop="3dp"
+                    
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
                     android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Ref # :"
-                        android:textColor="#696666"
+                        android:textColor="@color/estimates_card_text_color"
                         android:textStyle="bold"
-                        android:textSize="14dp" />
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/txt_crop_estimate_card_reference_number"
@@ -128,8 +117,8 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:text="123456 "
-                        android:textColor="#696666"
-                        android:textSize="14dp" />
+                        android:textColor="@color/estimates_card_text_color"
+                        android:textSize="14sp" />
 
 
                 </LinearLayout>
@@ -141,9 +130,9 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="6dp"
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginTop="3dp"
+                        android:layout_marginBottom="8dp"
+                        
+                        android:layout_marginTop="8dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -151,9 +140,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="08-03-2019"
-
-                            android:textColor="#696666"
-                            android:textSize="14dp" />
+                            android:textColor="@color/estimates_card_text_color"
+                            android:textSize="14sp" />
 
 
                         <TextView
@@ -163,9 +151,9 @@
                             android:gravity="end"
                             android:layout_marginLeft="5dp"
                             android:text="INVOICED"
-                            android:textColor="#696666"
+                            android:textColor="@color/estimates_card_text_color"
                             android:textSize="14sp"
-                            android:textStyle="bold"/>
+                            />
 
 
                     </LinearLayout>
@@ -176,7 +164,7 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
+                    
                     android:layout_marginTop="3dp"
                     android:visibility="gone"
                     android:id="@+id/layout_crop_estimate_card_order_number">
@@ -185,7 +173,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Order # :"
-                        android:textColor="#696666"
+                        android:textColor="@color/estimates_card_text_color"
                         android:textStyle="bold"
                         android:textSize="14dp" />
 
@@ -196,8 +184,8 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:text="123456 "
-                        android:textColor="#696666"
-                        android:textSize="14dp" />
+                        android:textColor="@color/estimates_card_text_color"
+                        android:textSize="14sp" />
 
 
 
