--- a/app/src/main/res/layout/crop_payments_list_card.xml
+++ b/app/src/main/res/layout/crop_payments_list_card.xml
@@ -4,61 +4,52 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content">
-    <LinearLayout
-        android:orientation="vertical"
-        android:background="@color/white"
-        android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp">
 
-        <LinearLayout
+
+    <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="8dp"
+            android:paddingStart="24dp"
+            android:background="@color/whiteColor"
+        >
 
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
                 android:layout_marginTop="3dp">
 
                 <TextView
                     android:id="@+id/txt_crop_payment_card_customer_name"
-                    android:textSize="14sp"
-                    android:textColor="#696666"
-                    android:layout_width="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="#000000"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:text="Kleiner Parker Firm" />
+                    android:layout_marginTop="16dp"
+                    android:text="Kleiner Parker Firm"
+                   android:layout_weight="0.6"/>
                 <LinearLayout
                     android:orientation="horizontal"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
                     android:layout_height="wrap_content"
                     android:gravity="right"
-                    android:layout_marginLeft="6dp"
                     >
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="right"
-                        android:layout_marginLeft="5dp"
-                        android:text="UGX"
-                        android:textColor="#696666"
-                        android:textSize="14dp" />
+               
                     <TextView
                         android:id="@+id/txt_crop_payment_card_amount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:text="300,000"
-                        android:layout_marginRight="10dp"
-                        android:textColor="#696666"
-                        android:textSize="14dp" />
+                        android:layout_marginTop="16dp"
+                        android:textColor="@color/estimates_card_currency_color"
+                        android:textSize="14sp" />
                     <ImageView
                         android:id="@+id/img_crop_payment_card_more"
                         android:layout_width="25dp"
@@ -72,29 +63,27 @@
 
 
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="#D2D3D2" />
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginTop="3dp"
-                    android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
 
                     <TextView
                         android:id="@+id/txt_crop_payment_card_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="08-03-2019"
-                        android:textColor="#696666"
-                        android:textSize="14dp" />
-                </LinearLayout>
-
+                        android:textColor="@color/estimates_card_text_color"
+                        android:textSize="14sp" />
 
             </LinearLayout>
 
@@ -104,27 +93,25 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="6dp"
-                android:layout_marginLeft="6dp"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:orientation="horizontal">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Payment # :"
-                    android:textColor="#696666"
-                    android:textStyle="bold"
-                    android:textSize="14dp" />
+                    android:textColor="@color/estimates_card_text_color"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/txt_crop_payment_card_payment_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="001 "
-                    android:textColor="#696666"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:textSize="14dp" />
+                    android:textColor="@color/estimates_card_text_color"
+                    android:layout_marginStart="4dp"
+           
+                    android:textSize="14sp" />
 
 
 
@@ -135,9 +122,9 @@
                     android:gravity="end"
                     android:layout_marginLeft="5dp"
                     android:text="CASH"
-                    android:textColor="#696666"
+                    android:textColor="@color/estimates_card_text_color"
                     android:textSize="14sp"
-                    android:textStyle="bold"/>
+                   />
 
 
             </LinearLayout>
@@ -146,9 +133,10 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:id="@+id/layout_crop_payment_card_invoice"
-                android:layout_marginTop="3dp">
+                >
 
 
                 <TextView
@@ -156,16 +144,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
-                    android:textColor="#696666"
-                    android:textSize="14dp" />
+                    android:textColor="@color/estimates_card_text_color"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Invoice Payment"
-                    android:textStyle="bold"
-                    android:textColor="#696666"
-                    android:textSize="14dp"
+                   
+                    android:textColor="@color/estimates_card_text_color"
+                    android:textSize="14sp"
                     android:gravity="end"/>
 
 
@@ -180,6 +168,4 @@
 
 
 
-
-    </LinearLayout>
 </LinearLayout>
