--- a/app/src/main/res/layout/crop_sales_order_list_card.xml
+++ b/app/src/main/res/layout/crop_sales_order_list_card.xml
@@ -4,62 +4,38 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:background="@color/white"
-        android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp">
-
-
-
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp"
-            android:orientation="horizontal">
-
-            <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:padding="8dp"
+                android:paddingStart="24dp"
+                android:background="@color/whiteColor"
+            >
 
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginTop="3dp">
+                   >
 
                     <TextView
                         android:id="@+id/txt_crop_estimate_card_customer_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="16dp"
                         android:text="Kleiner Parker Firm "
-                        android:textColor="#696666"
+                        android:textColor="#000000"
                         android:textSize="14sp" />
                     <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="right"
-                        android:layout_marginLeft="6dp"
                         >
-
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="right"
-                            android:layout_marginLeft="5dp"
-                            android:text="UGX"
-                            android:textColor="#696666"
-                            android:textSize="14dp" />
+                        
 
                         <TextView
                             android:id="@+id/txt_crop_estimate_card_amount"
@@ -67,8 +43,9 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:layout_marginRight="10dp"
-                            android:text="300,000"
-                            android:textColor="#696666"
+                            android:text="UGX 300,000"
+                            android:layout_marginTop="16dp"
+                            android:textColor="@color/estimates_card_currency_color"
                             android:textSize="14dp" />
 
 
@@ -88,17 +65,22 @@
 
                 </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:background="#D2D3D2" />
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginTop="3dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -106,7 +88,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="EST-001"
-                            android:textColor="#696666"
+                            android:textColor="@color/estimates_card_text_color"
                             android:textSize="14dp" />
 
                     </LinearLayout>
@@ -118,38 +100,37 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
                     >
 
                     <TextView
                         android:id="@+id/txt_crop_estimate_card_estimate_date"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="0.4"
                         android:text="08-03-2019"
-                        android:textColor="#696666"
+                        android:textColor="@color/estimates_card_text_color"
                         android:textSize="14dp" />
                     <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_weight="3"
+                        android:layout_weight="0.6"
                         android:layout_height="wrap_content">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Shipping Date:"
-                            android:textColor="#696666"
-                            android:textStyle="bold"
+                            android:textColor="@color/estimates_card_text_color"
+                           
                             android:textSize="14dp" />
 
                         <TextView
                             android:id="@+id/txt_crop_estimate_card_shipping_date"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginRight="10dp"
                             android:text="123456 "
-                            android:textColor="#696666"
+                            android:layout_marginStart="4dp"
+                            android:textColor="@color/estimates_card_text_color"
                             android:textSize="14dp" />
                     </LinearLayout>
 
@@ -159,24 +140,15 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="6dp"
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginTop="3dp"
-                        android:orientation="horizontal">
-
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp">
                         <LinearLayout
                             android:id="@+id/layout_crop_estimate_card_reference_number"
                             android:orientation="horizontal"
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="6dp"
-                            android:layout_marginTop="3dp"
                             >
 
                            
@@ -184,24 +156,21 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Ref # :"
-                                android:textColor="#696666"
-                                android:textStyle="bold"
+                                android:textColor="@color/estimates_card_text_color"
+                               
                                 android:textSize="14dp" />
 
                             <TextView
                                 android:id="@+id/txt_crop_estimate_card_reference_number"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="10dp"
-                                android:layout_marginRight="10dp"
+                                android:layout_marginStart="4dp"
                                 android:text="123456 "
-                                android:textColor="#696666"
+                                android:textColor="@color/estimates_card_text_color"
                                 android:textSize="14dp" />
 
 
                         </LinearLayout>
-
-
 
                         <TextView
                             android:id="@+id/txt_crop_estimate_card_status"
@@ -211,21 +180,17 @@
                             android:gravity="end"
                             android:layout_marginLeft="5dp"
                             android:text="INVOICED"
-                            android:textColor="#696666"
+                            android:textColor="@color/estimates_card_text_color"
                             android:textSize="14sp"
-                            android:textStyle="bold"/>
-
-
-                    </LinearLayout>
-
+                           />
 
                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
                     android:visibility="gone"
                     android:id="@+id/layout_crop_estimate_card_order_number">
 
@@ -233,8 +198,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Order # :"
-                        android:textColor="#696666"
-                        android:textStyle="bold"
+                        android:textColor="@color/estimates_card_text_color"
+                       
                         android:textSize="14dp" />
 
                     <TextView
@@ -244,7 +209,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:text="123456 "
-                        android:textColor="#696666"
+                        android:textColor="@color/estimates_card_text_color"
                         android:textSize="14dp" />
 
 
@@ -257,10 +222,4 @@
 
 
             </LinearLayout>
-        </LinearLayout>
-
-
-
-    </LinearLayout>
-
 </LinearLayout>
